--- a/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,7 +31,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRe-rV-09L">
-                    <rect key="frame" x="30" y="64" width="177.5" height="46.5"/>
+                    <rect key="frame" x="30" y="64" width="169.5" height="49"/>
                     <string key="text">안녕하세요 학부모님
 반갑습니다 </string>
                     <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="21"/>
@@ -41,13 +39,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아이의 학교 정보를 입력해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eis-72-ADC">
-                    <rect key="frame" x="30" y="160.5" width="233.5" height="25.5"/>
+                    <rect key="frame" x="30" y="163" width="220.5" height="20"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gra-xH-Im1" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
-                    <rect key="frame" x="30" y="199" width="354" height="95"/>
+                    <rect key="frame" x="30" y="196" width="354" height="95"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q5A-0A-V4d">
                             <rect key="frame" x="0.0" y="0.0" width="354" height="47"/>
@@ -82,13 +80,13 @@
                                     <rect key="frame" x="0.0" y="0.0" width="117.5" height="47"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5MU-eA-761">
-                                            <rect key="frame" x="0.0" y="0.0" width="78.5" height="47"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="80.5" height="47"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="학년" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rR3-nk-0wF">
-                                            <rect key="frame" x="78.5" y="0.0" width="28" height="47"/>
+                                            <rect key="frame" x="80.5" y="0.0" width="26" height="47"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="15"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <nil key="highlightedColor"/>
@@ -116,13 +114,13 @@
                                     <rect key="frame" x="118.5" y="0.0" width="117" height="47"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8jP-2h-kZI">
-                                            <rect key="frame" x="0.0" y="0.0" width="92" height="47"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="93" height="47"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="반" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Fy-f6-a4p">
-                                            <rect key="frame" x="92" y="0.0" width="14" height="47"/>
+                                            <rect key="frame" x="93" y="0.0" width="13" height="47"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="15"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <nil key="highlightedColor"/>
@@ -150,13 +148,13 @@
                                     <rect key="frame" x="236.5" y="0.0" width="117.5" height="47"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cXM-p9-Mid">
-                                            <rect key="frame" x="0.0" y="0.0" width="92.5" height="47"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="93.5" height="47"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                         </textField>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvZ-rn-tfS">
-                                            <rect key="frame" x="92.5" y="0.0" width="14" height="47"/>
+                                            <rect key="frame" x="93.5" y="0.0" width="13" height="47"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="15"/>
                                             <color key="textColor" name="greyishBrown"/>
                                             <nil key="highlightedColor"/>
@@ -208,7 +206,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xoi-fn-aFL" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
-                    <rect key="frame" x="30" y="307" width="354" height="95"/>
+                    <rect key="frame" x="30" y="304" width="354" height="95"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-Qk-TdN">
                             <rect key="frame" x="0.0" y="0.0" width="354" height="47"/>
@@ -280,20 +278,20 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phoneCall" translatesAutoresizingMaskIntoConstraints="NO" id="pPG-Ab-0eJ">
-                    <rect key="frame" x="30" y="670" width="11" height="14"/>
+                    <rect key="frame" x="30" y="673" width="11" height="14"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="14" id="q22-fU-4eV"/>
                         <constraint firstAttribute="width" constant="11" id="w1B-ov-kk9"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문의센터 02 1234 1234 (평일 9시 - 18시 공휴일 제외)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEM-fd-LVa">
-                    <rect key="frame" x="45" y="667.5" width="290.5" height="19.5"/>
+                    <rect key="frame" x="45" y="672.5" width="284.5" height="15.5"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
                     <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OS1-EA-753" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
-                    <rect key="frame" x="30" y="695" width="354" height="47"/>
+                    <rect key="frame" x="30" y="698" width="354" height="47"/>
                     <color key="backgroundColor" name="greenishTeal"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="47" id="Y8C-FN-kuV"/>
@@ -312,7 +310,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Q1-SN-f4F">
-                    <rect key="frame" x="30" y="742" width="354" height="50"/>
+                    <rect key="frame" x="30" y="745" width="354" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="X6y-9F-9Ib"/>
                     </constraints>
@@ -322,7 +320,7 @@
                     </state>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Woorischool Corp. All rights Reserved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7LA-R6-gO5">
-                    <rect key="frame" x="0.0" y="832" width="414" height="15"/>
+                    <rect key="frame" x="0.0" y="835" width="414" height="12"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
                     <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
