--- a/woorischool/Views/Parents/ModalViews/ParentsSignUpStep1ViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsSignUpStep1ViewController.xib
@@ -326,6 +326,9 @@
                             <real key="value" value="5"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="nextStepEvent" destination="-1" eventType="touchUpInside" id="Fxu-NJ-HCl"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
