--- a/woorischool/Views/Parents/ModalViews/ParentsHomeViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsHomeViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -41,7 +39,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bIM-66-uKl">
-                    <rect key="frame" x="96" y="81" width="139.5" height="46.5"/>
+                    <rect key="frame" x="96" y="79.5" width="133" height="49"/>
                     <string key="text">길동이 학부모님
 안녕하세요</string>
                     <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="21"/>
@@ -55,7 +53,7 @@
                         <constraint firstAttribute="width" constant="78" id="e7Q-zJ-3TT"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                    <state key="normal" title="계정전환">
+                    <state key="normal" title="자녀전환">
                         <color key="titleColor" name="veryLightPink"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -87,7 +85,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수강신청하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4z-5a-ItW">
-                    <rect key="frame" x="28" y="249" width="94" height="25.5"/>
+                    <rect key="frame" x="31" y="249" width="88.5" height="20"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="17"/>
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
@@ -109,7 +107,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수강신청현황" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOA-nq-YVY">
-                    <rect key="frame" x="160" y="249" width="94" height="25.5"/>
+                    <rect key="frame" x="163" y="249" width="88.5" height="20"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="17"/>
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
@@ -131,13 +129,13 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수강확정강좌" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnn-Lo-s3p">
-                    <rect key="frame" x="292" y="249" width="94" height="25.5"/>
+                    <rect key="frame" x="295" y="249" width="88.5" height="20"/>
                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="17"/>
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DdK-ME-j4g" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
-                    <rect key="frame" x="30" y="304.5" width="354" height="50"/>
+                    <rect key="frame" x="30" y="299" width="354" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="2Pw-QU-gHJ"/>
                     </constraints>
@@ -157,14 +155,14 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAx-5b-HjW">
-                    <rect key="frame" x="0.0" y="374.5" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="369" width="414" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="LUa-27-FJO"/>
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="a9Q-hV-stV">
-                    <rect key="frame" x="40" y="375.5" width="334" height="41"/>
+                    <rect key="frame" x="40" y="370" width="334" height="41"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Coa-ku-SaL" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="8" width="25" height="25"/>
@@ -304,28 +302,28 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cs1-io-wyY">
-                    <rect key="frame" x="0.0" y="416.5" width="414" height="1"/>
+                    <rect key="frame" x="0.0" y="411" width="414" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="cmA-r4-IuO"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KNG-Ec-Cg1">
-                    <rect key="frame" x="0.0" y="417.5" width="414" height="444.5"/>
+                    <rect key="frame" x="0.0" y="412" width="414" height="450"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘 일정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XA0-Zf-Vvz">
-                            <rect key="frame" x="20" y="21" width="71.5" height="27"/>
+                            <rect key="frame" x="20" y="21" width="67.5" height="21"/>
                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
                             <color key="textColor" name="greyishBrown"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pEN-18-Kcg">
-                            <rect key="frame" x="20" y="55" width="374" height="389.5"/>
+                            <rect key="frame" x="20" y="49" width="374" height="401"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qit-w4-nHZ" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
-                            <rect key="frame" x="20" y="55" width="374" height="74"/>
+                            <rect key="frame" x="20" y="49" width="374" height="74"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXy-3t-RmX" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
                                     <rect key="frame" x="21" y="15" width="44" height="44"/>
@@ -352,7 +350,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일정이 없습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbX-xb-4p9">
-                                    <rect key="frame" x="90" y="25" width="108" height="24"/>
+                                    <rect key="frame" x="90" y="27.5" width="101.5" height="19"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
                                     <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
