신청목록/ 신청대기/ 신청완료/ 수강확정 화면 추가 구현 및 api반영, 수강신청/ 대기인원 다찼을때 이벤트 처리들/ 신청가능여부 표기/ 필터된 정보 보이도록 처리

--- a/woorischool/Views/Cells/ParentsHomeScheduleTableViewCell.xib
+++ b/woorischool/Views/Cells/ParentsHomeScheduleTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,7 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="410" height="133"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="410" height="132.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="410" height="133"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQN-CE-Lcn" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
@@ -39,12 +37,12 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="과목(반)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umv-L8-fb3">
-                                <rect key="frame" x="89" y="12" width="62.5" height="27"/>
+                                <rect key="frame" x="89" y="12" width="56.5" height="21"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mjh-OL-g0P" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mjh-OL-g0P" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
                                 <rect key="frame" x="344" y="25" width="54" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="EyJ-Pv-vwp"/>
@@ -62,7 +60,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVb-FO-VQu">
-                                <rect key="frame" x="89" y="38" width="29.5" height="24"/>
+                                <rect key="frame" x="89" y="43" width="28" height="19"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
@@ -103,6 +101,11 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="classNameLabel" destination="umv-L8-fb3" id="yJC-UI-5hN"/>
+                <outlet property="lectureImageView" destination="sTg-y5-ZGQ" id="ww9-Dk-XUg"/>
+                <outlet property="timeLabel" destination="BVb-FO-VQu" id="cgl-RV-FQu"/>
+            </connections>
             <point key="canvasLocation" x="202.89855072463769" y="150.33482142857142"/>
         </tableViewCell>
     </objects>
