--- a/woorischool/Views/Parents/PopupViews/FillClassPopUpViewController.xib
+++ b/woorischool/Views/Parents/PopupViews/FillClassPopUpViewController.xib
@@ -19,7 +19,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FillClassPopUpViewController" customModule="woorischool" customModuleProvider="target">
             <connections>
+                <outlet property="classNameLabel" destination="KYA-J3-K4w" id="zCn-Tk-Jpt"/>
+                <outlet property="gradeLabel" destination="EKu-MJ-aaY" id="F78-Sg-Asd"/>
+                <outlet property="nameLabel" destination="vZU-26-ViU" id="QY4-Lh-15T"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weekDayLabel" destination="fQZ-rM-3C6" id="lq3-nF-31X"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -131,9 +135,12 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="doy-03-LRa">
                                     <rect key="frame" x="0.0" y="0.0" width="176.5" height="48"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="16"/>
-                                    <state key="normal" title="취소">
+                                    <state key="normal" title="닫기">
                                         <color key="titleColor" name="greyishBrown"/>
                                     </state>
+                                    <connections>
+                                        <action selector="closeView" destination="-1" eventType="touchUpInside" id="uBs-fd-p00"/>
+                                    </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cMl-Qb-olO">
                                     <rect key="frame" x="176.5" y="10" width="1" height="28"/>
@@ -145,9 +152,12 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eln-ar-YXF">
                                     <rect key="frame" x="177.5" y="0.0" width="176.5" height="48"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="16"/>
-                                    <state key="normal" title="대기하기">
+                                    <state key="normal" title="대기신청">
                                         <color key="titleColor" name="grapefruit"/>
                                     </state>
+                                    <connections>
+                                        <action selector="waitRequestEvent" destination="-1" eventType="touchUpInside" id="HWt-BD-mOa"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <constraints>
