--- a/woorischool/Views/Cells/TeacherHomeTableViewCell.xib
+++ b/woorischool/Views/Cells/TeacherHomeTableViewCell.xib
@@ -4,21 +4,174 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NotoSansCJKkr-Medium.otf">
+            <string>NotoSansCJKkr-Medium</string>
+        </array>
+        <array key="NotoSansCJKkr-Regular.otf">
+            <string>NotoSansCJKkr-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="178" id="KGk-i7-Jjw" customClass="TeacherHomeTableViewCell" customModule="woorischool" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="386" height="178"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="223" id="KGk-i7-Jjw" customClass="TeacherHomeTableViewCell" customModule="woorischool" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="386" height="223"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="386" height="178"/>
+                <rect key="frame" x="0.0" y="0.0" width="386" height="223"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jhs-8X-aZ0" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="386" height="203"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krz-WA-94L">
+                                <rect key="frame" x="19" y="12" width="39.5" height="19"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="16"/>
+                                <color key="textColor" name="greyishBrown"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aF5-k3-OVZ">
+                                <rect key="frame" x="19" y="33" width="34.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
+                                <color key="textColor" name="brownGrey"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="V8H-rC-7OP">
+                                <rect key="frame" x="0.0" y="64.5" width="386" height="118.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdW-Dx-ZjF">
+                                        <rect key="frame" x="0.0" y="0.0" width="128.5" height="118.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CYU-ik-L1S">
+                                                <rect key="frame" x="37" y="0.0" width="55" height="55"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="55" id="kqR-Rh-aWD"/>
+                                                    <constraint firstAttribute="width" constant="55" id="t2b-Rq-7Kp"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강의소개서 관리" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2YS-No-u07">
+                                                <rect key="frame" x="0.0" y="59" width="128.5" height="59.5"/>
+                                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
+                                                <color key="textColor" name="greyishBrown"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="CYU-ik-L1S" firstAttribute="centerX" secondItem="fdW-Dx-ZjF" secondAttribute="centerX" id="G5f-Dw-H48"/>
+                                            <constraint firstItem="CYU-ik-L1S" firstAttribute="top" secondItem="fdW-Dx-ZjF" secondAttribute="top" id="UNY-WN-yMh"/>
+                                            <constraint firstItem="2YS-No-u07" firstAttribute="leading" secondItem="fdW-Dx-ZjF" secondAttribute="leading" id="X4a-pr-jJv"/>
+                                            <constraint firstItem="2YS-No-u07" firstAttribute="top" secondItem="CYU-ik-L1S" secondAttribute="bottom" constant="4" id="XXD-fY-70u"/>
+                                            <constraint firstAttribute="trailing" secondItem="2YS-No-u07" secondAttribute="trailing" id="nKN-zQ-ShB"/>
+                                            <constraint firstAttribute="bottom" secondItem="2YS-No-u07" secondAttribute="bottom" id="p5U-jO-PFY"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eSB-aV-7rs">
+                                        <rect key="frame" x="128.5" y="0.0" width="129" height="118.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="edx-DP-lu4">
+                                                <rect key="frame" x="37" y="0.0" width="55" height="55"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="55" id="Dij-Kf-ilV"/>
+                                                    <constraint firstAttribute="height" constant="55" id="Dq8-rQ-It7"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강의소개서 관리" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGI-Ml-hrB">
+                                                <rect key="frame" x="0.0" y="59" width="129" height="59.5"/>
+                                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
+                                                <color key="textColor" name="greyishBrown"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="WGI-Ml-hrB" secondAttribute="trailing" id="KZD-yT-3TO"/>
+                                            <constraint firstItem="WGI-Ml-hrB" firstAttribute="top" secondItem="edx-DP-lu4" secondAttribute="bottom" constant="4" id="TjS-eP-glp"/>
+                                            <constraint firstAttribute="bottom" secondItem="WGI-Ml-hrB" secondAttribute="bottom" id="l5e-Xe-Il2"/>
+                                            <constraint firstItem="edx-DP-lu4" firstAttribute="centerX" secondItem="eSB-aV-7rs" secondAttribute="centerX" id="mHJ-IG-zQd"/>
+                                            <constraint firstItem="WGI-Ml-hrB" firstAttribute="leading" secondItem="eSB-aV-7rs" secondAttribute="leading" id="ure-MX-eQE"/>
+                                            <constraint firstItem="edx-DP-lu4" firstAttribute="top" secondItem="eSB-aV-7rs" secondAttribute="top" id="xDE-jZ-Prk"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fhx-z6-ERu">
+                                        <rect key="frame" x="257.5" y="0.0" width="128.5" height="118.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J2l-xx-YQ8">
+                                                <rect key="frame" x="36.5" y="0.0" width="55" height="55"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="55" id="eoH-AP-I6Y"/>
+                                                    <constraint firstAttribute="height" constant="55" id="tDo-sF-gUc"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강의소개서 관리" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VcX-en-B3n">
+                                                <rect key="frame" x="0.0" y="59" width="128.5" height="59.5"/>
+                                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="13"/>
+                                                <color key="textColor" name="greyishBrown"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="J2l-xx-YQ8" firstAttribute="centerX" secondItem="fhx-z6-ERu" secondAttribute="centerX" id="1QQ-8Q-8kc"/>
+                                            <constraint firstAttribute="bottom" secondItem="VcX-en-B3n" secondAttribute="bottom" id="1mb-Fr-Zyt"/>
+                                            <constraint firstItem="VcX-en-B3n" firstAttribute="leading" secondItem="fhx-z6-ERu" secondAttribute="leading" id="3sb-bv-fdu"/>
+                                            <constraint firstItem="J2l-xx-YQ8" firstAttribute="top" secondItem="fhx-z6-ERu" secondAttribute="top" id="GTw-Jp-iTJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="VcX-en-B3n" secondAttribute="trailing" id="hKp-9C-biv"/>
+                                            <constraint firstItem="VcX-en-B3n" firstAttribute="top" secondItem="J2l-xx-YQ8" secondAttribute="bottom" constant="4" id="wDs-Bf-sGO"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUX-hJ-svt">
+                                <rect key="frame" x="67.5" y="33" width="34.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
+                                <color key="textColor" name="brownGrey"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xUX-hJ-svt" firstAttribute="centerY" secondItem="aF5-k3-OVZ" secondAttribute="centerY" id="18P-xy-3LB"/>
+                            <constraint firstItem="V8H-rC-7OP" firstAttribute="top" secondItem="aF5-k3-OVZ" secondAttribute="bottom" constant="15" id="3yq-VR-jeU"/>
+                            <constraint firstItem="V8H-rC-7OP" firstAttribute="leading" secondItem="Jhs-8X-aZ0" secondAttribute="leading" id="5t2-yV-tYO"/>
+                            <constraint firstAttribute="trailing" secondItem="V8H-rC-7OP" secondAttribute="trailing" id="E6g-aW-65e"/>
+                            <constraint firstItem="xUX-hJ-svt" firstAttribute="leading" secondItem="aF5-k3-OVZ" secondAttribute="trailing" constant="14" id="JWf-Ps-q56"/>
+                            <constraint firstItem="aF5-k3-OVZ" firstAttribute="leading" secondItem="krz-WA-94L" secondAttribute="leading" id="NgQ-06-4SR"/>
+                            <constraint firstAttribute="bottom" secondItem="V8H-rC-7OP" secondAttribute="bottom" constant="20" id="lWK-la-fFr"/>
+                            <constraint firstItem="aF5-k3-OVZ" firstAttribute="top" secondItem="krz-WA-94L" secondAttribute="bottom" constant="2" id="nLP-53-QgO"/>
+                            <constraint firstItem="krz-WA-94L" firstAttribute="leading" secondItem="Jhs-8X-aZ0" secondAttribute="leading" constant="19" id="oxD-sZ-2aT"/>
+                            <constraint firstItem="krz-WA-94L" firstAttribute="top" secondItem="Jhs-8X-aZ0" secondAttribute="top" constant="12" id="zVX-7V-lF5"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Jhs-8X-aZ0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0LS-91-1ex"/>
+                    <constraint firstAttribute="trailing" secondItem="Jhs-8X-aZ0" secondAttribute="trailing" id="Gfd-iD-uJA"/>
+                    <constraint firstItem="Jhs-8X-aZ0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HEr-Tp-BPR"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Jhs-8X-aZ0" secondAttribute="bottom" constant="15" id="fBA-MS-4bh"/>
+                </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="185.50724637681162" y="142.63392857142856"/>
+            <point key="canvasLocation" x="185.50724637681162" y="157.03125"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="brownGrey">
+            <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="greyishBrown">
+            <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
