--- a/woorischool/Views/Teachers/ModalViews/TeacherLoginViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherLoginViewController.xib
@@ -33,22 +33,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYu-2T-Lkr" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
-                    <rect key="frame" x="30" y="657" width="354" height="47"/>
-                    <color key="backgroundColor" name="greenishTeal"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="47" id="nnN-Qo-bbc"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
-                    <state key="normal" title="로그인">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
-                            <real key="value" value="5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2d7-sa-Lms">
                     <rect key="frame" x="30" y="133.5" width="151.5" height="49"/>
                     <string key="text">안녕하세요 선생님
@@ -159,12 +143,25 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Woorischool Corp. All rights Reserved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wi3-Nm-sum">
-                    <rect key="frame" x="99" y="834" width="216.5" height="12"/>
-                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                    <color key="textColor" name="brownGrey"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYu-2T-Lkr" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                    <rect key="frame" x="30" y="657" width="354" height="47"/>
+                    <color key="backgroundColor" name="greenishTeal"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="47" id="nnN-Qo-bbc"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
+                    <state key="normal" title="로그인">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                            <real key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="loginEvent" destination="-1" eventType="touchUpInside" id="Zoy-hg-SKk"/>
+                    </connections>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUR-GJ-wn3">
                     <rect key="frame" x="30" y="704" width="354" height="50"/>
                     <constraints>
@@ -174,7 +171,16 @@
                     <state key="normal" title="회원가입">
                         <color key="titleColor" name="greenishTeal"/>
                     </state>
+                    <connections>
+                        <action selector="signUpEvnent" destination="-1" eventType="touchUpInside" id="9dR-JW-cHN"/>
+                    </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Woorischool Corp. All rights Reserved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wi3-Nm-sum">
+                    <rect key="frame" x="99" y="834" width="216.5" height="12"/>
+                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
+                    <color key="textColor" name="brownGrey"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
